Bug 1847468 - Use __ANDROID_API__ instaed of ANDROID_NDK_MAJOR_VERSION. r=gsvelto

When using NDK r25c, linker throws an error as undefined reference.

Even if NDK r25c, if `__ANDROID_API__` isn't 24+, `getgrnam_r` and etc aren't
defined in NDK libraries. So we should use `__ANDROID_API__` instead of
`ANDROID_NDK_MAJOR_VERSION`.

Differential Revision: https://phabricator.services.mozilla.com/D185519